added button functionalities

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       <div class="content">
         <div class="board"></div>
         <div class="buttons">
-          <button>Black</button>
-          <button>Eraser</button>
+          <button class="black">Black</button>
+          <button class="eraser">Eraser</button>
+          <button class="random">Random Color</button>
           <div>
             <input
               type="number"
@@ -22,6 +23,7 @@
               placeholder="Size of the board"
             />
             <button class="size-button buttons">Set Size</button>
+            <button class="reset-button buttons">Reset</button>
           </div>
         </div>
       </div>
