added styles and fixed html

--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="grid-containter">
+    <div class="grid-container">
       <div class="content">
         <div class="board"></div>
         <div class="buttons">
-          <button class="black">Black</button>
-          <button class="eraser">Eraser</button>
-          <button class="random">Random Color</button>
-          <div>
-            <input
-              type="number"
-              id="size-input"
-              value="16"
-              placeholder="Size of the board"
-            />
-            <button class="size-button buttons">Set Size</button>
-            <button class="reset-button buttons">Reset</button>
-          </div>
+          <button class="black button">Black</button>
+          <button class="eraser button">Eraser</button>
+          <button class="random button">Random</button>
+          <button class="reset-button button">Reset</button>
+        </div>
+        <div class="input">
+          <button class="size-button button">Set Size</button>
         </div>
       </div>
     </div>
